Fixed little gap on the left of bottom bar

--- a/static/styles.css
+++ b/static/styles.css
@@ -27,12 +27,17 @@ h1{
 
 /* Place the navbar at the bottom of the page, and make it stick */
 .bottomBar {
-    padding: 0px;
     background-color: #333;
     overflow: hidden;
     position: fixed;
     bottom: 0;
     width: 110%;
+    box-shadow: 0 10px 8px -6px #999;
+    position: absolute;
+    left: 0;
+    overflow: hidden;
+    margin: 0 auto;
+    padding: 0;
 }
 
 /* Style the links inside the navigation bar */
@@ -48,7 +53,7 @@ h1{
 
 /* Change the color of links on hover */
 .navbar a:hover {
-    background-color: #ddd;
+    background-color: #999;
     color: black;
 }
 
